(feat): add zitadel token verify api
